# tree-sitter-bsl

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  example-file.bsl  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bsl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBsl/: bsl.h
bindings/swift/TreeSitterBslTests/: TreeSitterBslTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: declarations.txt
